@@ -1,3 +1,8 @@
+2001-02-13  Richard Henderson  <rth@redhat.com>
+
+	* elfxx-ia64.c (elfNN_ia64_final_link): Set __gp if required
+	and not user provided.
+
 2001-02-13  Kazu Hirata  <kazu@hxi.com>
 
 	* vms.c (vms_print_symbol): Remove unreachable code.
